<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dk.play.CloudSongs" >
    <item
        android:id="@+id/action_search_song"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search_actionbar"/>
    <item 
        android:id="@+id/refresh" 
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/refresh" android:visible="true" android:enabled="true" android:showAsAction="always">
    </item>
	<item android:id="@+id/deleted_items" android:showAsAction="never" android:title="@string/cloud_deletet_items"></item>
	<item android:id="@+id/cloud_sync_songs" android:title="@string/cloud_sync_songs" android:showAsAction="never"></item>
	    <item 
        android:id="@+id/adv" 
        android:showAsAction="never" 
        android:title="@string/adv" 
        android:orderInCategory="90"/>
</menu>
