<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:orderInCategory="0"
        android:showAsAction="never"
        android:title="@string/action_search"/>
    
    <item
        android:id="@+id/action_re_create"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_re_create"/>
    
    <item
        android:id="@+id/action_removed_songs"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_removed_songs"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item 
        android:id="@+id/action_search_song" 
        android:showAsAction="collapseActionView|ifRoom" 
        android:orderInCategory="1" 
        android:title="@string/action_search_actionbar"
        android:icon="@drawable/ic_action_search"
        android:actionViewClass="android.widget.SearchView" />

</menu>
