<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search_song"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search_l"
        android:orderInCategory="1"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/action_search_actionbar"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_action_save_l"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/save_current_playlist"/>
    <item
        android:id="@+id/toggle_overlay_player"
        android:icon="@drawable/ic_action_dock_l"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_overlay_player"/>

</menu>