<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
 
    <ImageView
        android:id="@+id/dlg_cover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/contentDescription" />
 
    <TextView
        android:id="@+id/dlg_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dlg_cover"/>

     <Button
         android:id="@+id/dlg_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/dlg_content"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="20dp"
         android:text="@string/no" />

     <Button
         android:id="@+id/dlg_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/dlg_cancel"
         android:layout_alignBottom="@+id/dlg_cancel"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:text="@string/yes" />
 
</RelativeLayout>