<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dk.play.fragments.FirstLaunchFragment" >

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:maxHeight="16dp"
        android:minHeight="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/progressBar1" >

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/hello_first_launch"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/search_first_launch"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/found_first_launch"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/next"
                style="@style/ButtonAppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_below="@id/imageView1"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="22dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/yellow_button"
                android:enabled="false"
                android:text="@string/next"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/found"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/contentDescription"
                android:scaleType="fitCenter"
                android:src="@drawable/yellow_wave" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>